--- a/net42/history
+++ b/net42/history
@@ -22,3 +22,8 @@ var created3 = eth.getTransactionReceipt(createTx3).contractAddress
 eth.getCode(created3)
 eth.getStorageAt(created3, 0)
 eth.sendTransaction({ from: eth.accounts[0], to: created3, data: "0x67" })
+var bytecode3 = "0x6006600c60003960066000f3600035600055"
+var createTx3 = eth.sendTransaction({ from: eth.accounts[0], data: bytecode3 })
+miner.start()
+miner.stop()
+var created3 = eth.getTransactionReceipt(createTx3).contractAddress
